todoyu sysmanager extension changelog

sysmanager 1.2.0 - 2012-05-03
	* Feature: Grant access to sysmanager with normal rights configuration (no admin rights required anymore)
	* Feature: System email can now also use an SMTP account
	* Added: SMTP account object
	* Added: Records listing highlights inactive (is_active: 0) records half-transparent and preferred (is_preferred: 1) green
	* Added: Records config can now contain function reference or categorical boolean flag for isDeletable definition
	* Added: Quickinfo popup for right requirements
	* Changed: Integrated admin extension into sysmanager
	* Changed: Renamed admin.php to sysmanager.php in all extensions

sysmanager 1.1.4 - 2011-12-13
	* Added: Added config option for new debug level core
	* Changed: Persons in role form are now sorted alphabetically (instead of ID)

sysmanager 1.1.3 - 2011-11-17
	* Bugfix: Set record ID, and change ID to zero for new record (instead of -1, which breaks clean field naming)
	* Translation: Polish

sysmanager 1.1.2 - 2011-09-15
	* Bugfix: Error label was interpolated too soon
	* Bugfix: Uploaded extensions were not recognized as commercial without a license
	* Added: Items amount in records listing
	* Changed: Extension status is now also recognized when not lowercase (ex: Beta)

sysmanager 1.1.1 - 2011-07-25
	* Bugfix: Send info for registration to check API version
	* Bugfix: Fixed invalid labels in checkout dialogs
	* Feature: Added functionality to register imported extensions
	* Added: Missing label, error prevention on unknown extensions
	* Added: Testing for invalid repository response and throw exception
	* Added: German translations
	* Added: Problem with the API are now reported to the user
	* Changed: Changed API to work with new tER API

sysmanager 1.1.0 - 2011-06-17
 	* Bugfix: Added missing notification after deletion of role
	* Feature: Added todoyuURL setting in config
	* Feature: Added classes for repository and updater