@@ -1,9 +1,11 @@
 todoyu sysmanager extension changelog
 
+sysmanager 1.3.0 - not released yet
+	* Feature: Support for SMTP account as default system email sending method (before there was only mail())
+    * Added: SMTP accounts
+
 sysmanager 1.2.0 - 2012-05-03
 	* Feature: Grant access to sysmanager with normal rights configuration (no admin rights required anymore)
-	* Feature: System email can now also use an SMTP account
-	* Added: SMTP account object
 	* Added: Records listing highlights inactive (is_active: 0) records half-transparent and preferred (is_preferred: 1) green
 	* Added: Records config can now contain function reference or categorical boolean flag for isDeletable definition
 	* Added: Quickinfo popup for right requirements
